# MetaHackathon

./: Dockerfile  README.md  TODO.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
